# metasketch

./: .gitignore  AGENTS.md  README.md  pyproject.toml
metasketch/: __main__.py
