[project]
name = "metasketch"
version = "0.1.0"
description = "Metasketch is a collaborative web application that enables non-developers to design, organize, and export living functional documents with the help of AI, using an intuitive, project-based interface."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.95.0,<1.0.0",
  "uvicorn[standard]>=0.22.0,<1.0.0",
  "jinja2>=3.1.2,<4.0.0",
  "pydantic>=1.10.11,<2.0.0",
  "chromadb>=0.3.31,<1.0.0",
  "langchain>=0.0.300,<1.0.0",
  "openai>=0.28.0,<1.0.0",
  "python-docx>=0.8.11,<1.0.0",
  "pdfplumber>=0.10.0,<1.0.0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=1.4,<2.0",
]
